Stabilize blocks/tasks state and add UI diagnostics

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </div>
 
       <section id="result" class="result" aria-live="polite">Выберите блок и нажмите «Выбрать».</section>
+      <div id="diagnostics" class="diagnostics" aria-live="polite">Блоков: 0, Задач в блоке: 0</div>
 
       <section class="task-create">
         <h2>Добавить задачу</h2>
